--- a/css/styles.css
+++ b/css/styles.css
@@ -2,3 +2,8 @@
 #searchModal > .modal-dialog {
     max-width: 90%;
 }
+.search-result-success:hover {
+
+    background-color: rgb(239, 248, 230);
+    opacity: 0.5;
+}
